--- a/JS/13.Todo/index.html
+++ b/JS/13.Todo/index.html
@@ -21,7 +21,7 @@
         <form id="todoForm" class="py-4 container">
           <div class="input-group input-group-lg">
             <input type="text" class="form-control" id="todoInput" placeholder="Add todo..." autofocus>
-            <div class="input-group-append">
+            <div class="input-group-append input-group-lg">
               <button id="addItemBtn" class="btn btn-info">ADD</button>
             </div>
           </div>
